--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -34,7 +34,8 @@
 
         <div class="form-group">
             <label>E-Mail Adresse des Schülers *</label>
-            <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" data-pattern="*@test.de" pattern=".+@test.de" required />
+            <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required />
+            <!-- with mail pattern: <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" data-pattern="*@test.de" pattern=".+@test.de" required />-->
             <span class="mailinfo"></span>
         </div>
         <p>
