cont: first login for existing users
texte + alter patch

--- a/views/firstLogin/firstLoginExistingUser.hbs
+++ b/views/firstLogin/firstLoginExistingUser.hbs
@@ -10,9 +10,9 @@
   {{#content "page"}}
     <div id="welcome-screen">
       <p>Herzlich Willkommen in der HPI Schul-Cloud, {Vorname Nachname}</p>
-      <p>Mit dem Schuljahr 2018/2019 haben wir die Registrierung in der Schul-Cloud von Papier auf Digital umgestellt. Das macht es notwendig, dass wir dein Einverständnis zur Nutzung der Schul-Cloud elektronisch erfassen, sofern du älter als 14 Jahre bist. </p>
+      <p>Mit dem Schuljahr 2018/2019 haben wir die Registrierung in der Schul-Cloud von Papier auf Digital umgestellt. Das macht es notwendig, dass wir dein Einverständnis zur Nutzung der Schul-Cloud erneut elektronisch erfassen, sofern du älter als 13 Jahre bist.</p>
 
-        <p>Bitte wähle dein Alter aus:</p>
+        <p>Bitte wähle: Ich bin...</p>
         <div class="form-group">
             <fieldset>
                 <input type="radio" id="reg-u14" name="student-age" value="u14"><label for="reg-u14">&nbsp;&nbsp;unter 14 Jahre</label><br>
