--- a/views/firstLogin/firstLoginExistingUserU14.hbs
+++ b/views/firstLogin/firstLoginExistingUserU14.hbs
@@ -8,54 +8,26 @@
       <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
  {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=4 action="" method=""}}
+    {{#embed "lib/forms/paginatedForm" sections=2 action="existing/submit" method="POST"}}
       {{#content "panels"}}
-
-      <section data-panel="section-1">
-        <h4>U14Herzlich Willkommen in der Schul-Cloud, {Vorname, Nachname}</h4>
-        <p>Wir freuen uns, dass du die Schul-Cloud nutzen möchtest.</p>
-        <p>Bitte überprüfe in den kommenden Schritten die für dich angegebene E-Mail-Adresse und ändere dein Startpasswort.</p>
-        <p>Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der Schul-Cloud die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die Schul-Cloud ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. ????🦄</p>
-      </section>
-
-
-      <section data-panel="section-2">
-        <h4>Wie können wir dich erreichen?</h4>
-        <p>Bitte überprüfe deine E-Mail-Adresse:</p>
-        <div class="row">
-          <div class="form-group col-md-6 col-sm-12">
-              <label>E-Mail:</label>
-              <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required>
-          </div>
-        </div>
-      </section>
+          <section data-panel="section-1" class="submit-page">
+              <h4>Du hast es fast geschafft…</h4>
+              <p>Da du unter 14 Jahre alt bist, reicht die Einverständniserklärung deiner Erziehungsberechtigten zur Nutzung der Schul-Cloud. Sobald du 14 Jahre alt bist, wirst du automatisch nach deinem Einverständnis gefragt. Bitte gib dazu dein Geburtsdatum ein.</p>
+              <div class="row">
+                  <div class="form-group col-md-6 col-sm-12">
+                      <label>Geburtsdatum: *</label>
+                      <input class="form-control linked" data-date data-min-date="2002/01/01" data-max-date="2012/01/01" data-start-date="2007/01/01" name="studentBirthdate" type="text" required autocomplete="off" />
+                  </div>
+              </div>
+          </section>
 
 
-      <section data-panel="section-3" class="submit-page">
-        <h4>Du hast es fast geschafft...</h4>
-        <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
-         <div class="row">
-          <div class="form-group col-md-6 col-sm-12">
-            <label>Neues Passwort: *</label>
-            <input class="form-control" name="password-1" type="password" placeholder="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen." required/>
-          </div>
-          <div class="form-group col-md-6 col-sm-12">
-            <label>Wiederhole dein neues Passwort: *</label>
-            <input class="form-control" name="password-2" type="password" placeholder="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen." required/>
-          </div>
-        </div>
-
-        <label>
-            <input name="sendCredentials" type="checkbox" value="sendCredentials"/>
-            Login-Daten per Mail an mich senden
-        </label>
-      </section>
-
-      <section data-panel="section-4">
-        <h4>Fertig!</h4>
-        <p>Du kannst jetzt mit der Benutzung der HPI Schul-Cloud starten.</p>
-        <a class="btn btn-primary" href="//schul-cloud.org">Schul-Cloud erkunden</a>
-      </section>
+          <section data-panel="section-2">
+              <h4>Danke!</h4>
+              <p>Du kannst jetzt mit der Benutzung der HPI Schul-Cloud fortfahren.<br>
+                  <a class="btn btn-primary" href="//schul-cloud.org">Schul-Cloud erkunden</a>
+              </p>
+          </section>
       {{/content}}
     {{/embed}}
   {{/content}}
