[WIP] use vue in my-material view

--- a/views/my-material/my-material.hbs
+++ b/views/my-material/my-material.hbs
@@ -2,8 +2,7 @@
 
     {{#content "scripts" mode="append"}}
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js" defer></script>
-        <!-- <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script> -->
-        <script src="/scripts/vendor-vue.js" defer></script>
+        <!-- <script src="/scripts/vendor-vue.js" defer></script> -->
         <script src="/scripts/userGeneratedContent/my-material.js" defer></script>
     {{/content}}
 
@@ -15,6 +14,7 @@
     {{#content "page"}}
 
         <div id="app">
+          Hier sollte eigentlich ein Template geladen werden.
         </div>
 
         <p>
