new: classid in reg link (wip)

--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -153,6 +153,7 @@
             Login-Daten per E-Mail an angegebene Adressen senden
           </label>
           <p>Beim ersten Login muss ein neues Passwort gewählt werden. Schüler ab 14 Jahren müssen beim ersten Login die Einwilligungserklärungen zusätzlich selbst bestätigen.</p>
+          <input class="hidden" type="hidden" value="{{classId}}" />
         </div>
       </section>
 
