--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -29,6 +29,7 @@
         </div>
       <button id="showRegistrationForm" class="btn btn-primary" disabled>Weiter</button>
         <p><br><br>* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir die männliche Form. Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die Schul-Cloud ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. ‍🌈🎉🦄</p>
+        <input type="hidden" name="classId" value="{{classId}}" />
     </div>
   {{/content}}
 {{/extend}}
