--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -45,11 +45,10 @@
           <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <Label>Geschlecht *</Label>
             <select class="form-control form-control-lg" type="text" name="gender">
-              <option value="">Bitte Geschlecht auswählen</option>
+              <option value="noinfo">keine Angabe</option>
               <option value="male">männlich</option>
               <option value="female">weiblich</option>
               <option value="other">andere</option>
-              <option value="noinfo">keine Angabe</option>
             </select>
           </div>
         </div>
@@ -123,12 +122,11 @@
       <section data-panel="section-4" class="submit-page" data-feature="pin">
         <h4>Abschluss</h4>
         <p>Fast geschafft!</p>
-        <p>Wir habe soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen.</p>
+        <p>Wir habe soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen. Sie haben keine E-Mail erhalten? <a id="resend-pin" href="#">Code erneut senden</a></p>
         <div id="pinverification">
             <div id="temp-pin" class="hidden"></div>
-            {{#embed "administration/forms/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
-            <button id="check-pin" class="btn btn-primary">prüfen</button>
-            <p><a id="resend-pin" href="#">Code erneut senden</a></p>
+            {{#embed "registration/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
+            <button id="check-pin" class="btn btn-primary">PIN prüfen</button>
         </div>
         <div id="userdata-summary" class="hidden">
           <p>
