--- a/views/registration/templates/registrationNew.hbs
+++ b/views/registration/templates/registrationNew.hbs
@@ -15,6 +15,9 @@
                 <div class="col-md-12">
                     <section class="card">
                         <div class="card-block">
+                            <div class="col-xs-12">
+                                {{> "lib/components/notification"}}
+                            </div>
                             {{#block "page"}}{{/block}}
                         </div>
                     </section>
