patch at the end of first login

--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
   {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=5 action="administration/dataprivacy/firstLogin/submit" method="post"}}
+    {{#embed "lib/forms/paginatedForm" sections=5 action="/submit" method="post"}}
       {{#content "panels"}}
 
       <section data-panel="section-1">
