--- a/views/firstLogin/firstLoginUE18.hbs
+++ b/views/firstLogin/firstLoginUE18.hbs
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
  {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=3 action="" method=""}}
+    {{#embed "lib/forms/paginatedForm" sections=3 action="/submit" method=""}}
       {{#content "panels"}}
 
       <section data-panel="section-1">
