--- a/views/lib/forms/paginatedForm.hbs
+++ b/views/lib/forms/paginatedForm.hbs
@@ -15,7 +15,7 @@
     {{#block "panels"}}{{/block}}
   </div>
 
-  <button id="prevSection" class="btn btn-secondary" disabled="disabled">Zurück</button>
+  <button id="prevSection" class="btn btn-secondary" type="button" disabled="disabled">Zurück</button>
   <button id="nextSection" class="btn btn-primary" type="submit" value="Submit" 
     data-next-label="Weiter" data-submit-label="Absenden">Weiter</button>
 </form>
