--- a/views/classes/overview.hbs
+++ b/views/classes/overview.hbs
@@ -20,8 +20,7 @@
                                             {{#userHasPermission "COURSE_EDIT"}}
                                                 <div class="row">
                                                     <a class="btn-edit"
-                                                       href="/classes/{{../_id}}/edit"
-                                                       target="_blank"
+                                                       href="/classes/{{../_id}}/manage"
                                                        alt="Bearbeiten der Klasse: '{{../name}}'.">
                                                         <i class="fa fa-edit"></i>
                                                     </a>
