finished mock of class manage

--- a/static/styles/administration/progress.scss
+++ b/static/styles/administration/progress.scss
@@ -107,6 +107,8 @@
   border:none;
   color: #222;
 }
+/*
+new fancy button Design
 .btn-primary{
   background: $logoGradient;
   color: #fff;
@@ -123,3 +125,4 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
 }
+*/
