--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -29,6 +29,11 @@ a[data-toggle="collapse"]:focus{
     text-decoration:none !important;
 }
 
+.btn-link{
+	margin: 0;
+	padding: 0;
+}
+
 p.small {
 	line-height: 18px;
 	font-size: 12px;
