--- a/static/styles/classes/classes.scss
+++ b/static/styles/classes/classes.scss
@@ -1,4 +1,6 @@
 @import '../lib/colors';
+@import "../lib/bootstrap/scss/bootstrap-flex";
+
 .section-classes {
   h4 {
     margin-bottom: 20px;
@@ -35,4 +37,11 @@
   .disabled > * {
     pointer-events: none;
   }
+}
+.chosen-container-multi .chosen-choices .search-choice{
+  @include media-breakpoint-up(xs) { width: 95%; }
+  @include media-breakpoint-up(sm) { width: 47%; }
+  @include media-breakpoint-up(md) { width: 32%; }
+  @include media-breakpoint-up(lg) { width: 24%; }
+  @include media-breakpoint-up(xl) { width: 16%; }
 }
