--- a/views/classes/edit.hbs
+++ b/views/classes/edit.hbs
@@ -6,11 +6,13 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/classes/classes.css"/>
+        <!-- dataprivacy is only used for .recap -->
+        <link rel="stylesheet" href="/styles/administration/dataprivacy.css"/>
     {{/content}}
 
     {{#content "page"}}
-        <section class="section-classes-edit">
-            <form class="edit-form" method="update" action="">
+        <section class="section-classes-create">
+            <form class="create-form" method="post" action="">
                 {{> "administration/forms/form-classes-edit"}}
             </form>
         </section>
