towards moving vue content editor search into schul-cloud

--- a/views/content/forms/form-search.hbs
+++ b/views/content/forms/form-search.hbs
@@ -3,7 +3,7 @@
 {{/content}}
 
 <div id="app">
-  lksjdlksdjflksdjflkösadjflöksadjf sdfkls dflkasdj fglkasdjf sadlkfj
+  Bitte mit der App überschreiben.
 </div>
 
 <form method="get">
