--- a/views/my-material/my-material.hbs
+++ b/views/my-material/my-material.hbs
@@ -1,8 +1,7 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js" defer></script>
-        <!-- <script src="/scripts/vendor-vue.js" defer></script> -->
+        <script src="/scripts/vendor-vue.js" defer></script>
         <script src="/scripts/userGeneratedContent/my-material.js" defer></script>
     {{/content}}
 
@@ -14,9 +13,13 @@
     {{#content "page"}}
 
         <div id="app">
-          Hier sollte eigentlich ein Template geladen werden.
+          Hier sollte eigentlich ein Template geladen werden!
         </div>
-
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <p>
           Hier werden Sie bald die Möglichkeit haben, eigene Inhalte zu erstellen, sich Inhalte anderer Lehrer*Innen anzuschauen und durch Bewerten und Kategorisieren dieser Punkte verdienen, um die erweiterten Suchfunktionen nutzen zu können. Interessiert, wie das funktionieren wird? Lesen Sie den <a href="https://blog.schul-cloud.org/unterrichtsvorbereitung-in-der-hpi-schul-cloud-neu-gedacht/" target="_blank">Blogartikel</a> und nutzen Sie die Möglichkeit, das Feature nach ihren Wünschen zu gestalten.
         </p>
