--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -90,4 +90,4 @@
 {{/unless}}
 
 
-<a href="/classes" class="btn btn-secondary mt-2 w-100">Abbrechen</a>
+<a href="{{@root.referer}}" class="btn btn-secondary mt-2 w-100">Abbrechen</a>
