more page events, hide next button on last page, insert real name everywhere, improved checkbox description style

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -72,6 +72,7 @@ label,
 .hidden{
 	display: none;
 }
+
 .show{
 	display: initial;
 }
@@ -172,6 +173,9 @@ form.inline {
 .btn-thin {
 	padding-left: 15px !important;
 	padding-right: 15px !important;
+}
+.btn.hidden{
+	display:none;
 }
 
 .alert-fixed {
