--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -30,37 +30,40 @@
             Du bist älter als 13 Jahre. Bitte bestätige folgende Einwilligungserklärungen, damit du die Schul-Cloud nutzen kannst.
         </p>
         <p>
-            Ich, {{currentUser.firstName}} {{currentUser.lastName}}, erkläre folgendes:
+            Ich, <b>{{currentUser.firstName}} {{currentUser.lastName}}</b>, erkläre folgendes:
         </p>
+
         <label>
             <input name="Erhebung" type="checkbox" value="true" required/>
-            <span>Ich habe die <a href=" " >Datenschutzerklärung</a> gelesen und willige in die Verarbeitung der Nutzerdaten ein.</span>
+            <span>Ich habe die <a href=" "  target="_blank">Datenschutzerklärung</a> gelesen und willige in die Verarbeitung der Nutzerdaten ein.</span>
         </label>
-
         <p class="explanation">
             <span>Um die Nutzung der Schul-Cloud zu ermöglichen, ist die Verarbeitung von personenbezogenen Daten der Nutzer erforderlich. Dies erfolgt ausschließlich entsprechend der hohen gesetzlichen Datensicherheits-Anforderungen. Das HPI verarbeitet nur die Daten, deren Erhebung unbedingt erforderlich ist und sorgt dafür, dass sie nicht in unbefugte Hände geraten.</span>
         </p>
+
         <label>
             <input name="Forschung" type="checkbox" value="true" required/>
-            <span>Ich habe die <a href=" " >Informationen zum Forschungsvorhaben</a> gelesen und willige in die wissenschaftliche Auswertung ein.</span>
+            <span>Ich habe die <a href=" " target="_blank">Informationen zum Forschungsvorhaben</a> gelesen und willige in die wissenschaftliche Auswertung ein.</span>
         </label>
-
         <p class="explanation">
             Die HPI Schul-Cloud wird von einem wissenschaftlichen Forschungsprojekt begleitet, das der Optimierung des Lernerlebnisses in der Schul-Cloud dient. Im Rahmen dessen werden Nutzungsdaten anonymisiert ausgewertet.
         </p>
+
         <label>
             <input name="Pseudonymisierung" type="checkbox" value="true" required/>
-            <span>Ich habe die <a href=" " >Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein.</span>
+            <span>Ich habe die <a href=" "  target="_blank">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein.</span>
         </label>
-
         <p class="explanation">
-            Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der Schul-Cloud.         </p>
+            Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der Schul-Cloud.
+        </p>
+
         <label>
             <input name="Nutzungsbedingungen" type="checkbox" value="true" required/>
-            <span>Ich habe die <a href=" ">Nutzungsbedingungen</a> gelesen und stimme ihnen zu.</span>
+            <span>Ich habe die <a href=" "  target="_blank">Nutzungsbedingungen</a> gelesen und stimme ihnen zu.</span>
         </label>
-
-          <p>Die Nutzung der Schul-Cloud ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes Schul-Cloud-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A">widerruf@schul-clud.org</a></p>
+        <p class="explanation">
+            Die Nutzung der Schul-Cloud ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes Schul-Cloud-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A">widerruf@schul-clud.org</a>
+        </p>
       </section>
 
 
