fix: registration routes with classids

--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -52,6 +52,7 @@
           </div>
         </div>
         <p>Die Erhebung erfolgt für Forschung und Optimierung.</p>
+          <input type="hidden" name="classId" value="{{classId}}" />
       </section>
 
 
