--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -53,6 +53,7 @@
           </div>
         </div>
         <p>Erhebung erfolgt für Forschung und Optimierung.</p>
+          <input type="hidden" name="classId" value="{{classId}}" />
       </section>
 
 
