moved classes from /classes to /administration/classes

--- a/views/administration/classes.hbs
+++ b/views/administration/classes.hbs
@@ -13,9 +13,9 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            <button type="submit" class="btn btn-primary btn-add">
+                            <a href="/administration/classes/create" class="btn btn-primary btn-add">
                                 Klasse hinzufügen
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
