--- a/views/administration/calendar.hbs
+++ b/views/administration/calendar.hbs
@@ -41,6 +41,11 @@
 					{{> "administration/forms/form-calendar"}}
 				{{/content}}
 			{{/embed}}
+			{{#embed "lib/components/modal-form" body=body method="delete" class="delete-modal"}}
+                {{#content "fields"}}
+                    {{> "administration/forms/form-calendar-delete"}}
+                {{/content}}
+            {{/embed}}
 		</section>
     </div>
 	  
